[package]
name = "wasefire-cli-tools"
version = "0.3.1-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Command-line utilities for Wasefire"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["cli", "embedded", "framework", "wasm"]
categories = ["command-line-utilities", "embedded", "wasm"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
anyhow = { version = "1.0.99", default-features = false, features = ["std"] }
cargo_metadata = { version = "0.22.0", default-features = false, optional = true }
data-encoding = { version = "2.9.0", default-features = false, features = ["std"], optional = true }
flate2 = { version = "1.1.2", default-features = false, features = ["rust_backend"] }
humantime = { version = "2.2.0", default-features = false, optional = true }
indicatif = { version = "0.18.0", default-features = false, optional = true }
log = { version = "0.4.27", default-features = false }
reqwest = { version = "0.12.23", default-features = false, features = ["default-tls", "http2"] }
rusb = { version = "0.9.4", default-features = false, optional = true }
semver = { version = "1.0.26", default-features = false, optional = true }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serialport = { version = "4.7.3", default-features = false, optional = true }
tar = { version = "0.4.44", default-features = false }
toml = { version = "0.9.5", default-features = false, features = ["display", "parse", "serde"] }
wasefire-common = { version = "0.1.1-git", path = "../common", optional = true }
wasefire-interpreter = { version = "0.4.1-git", path = "../interpreter", optional = true }
wasefire-wire = { version = "0.1.3-git", path = "../wire", optional = true }

[dependencies.clap]
version = "4.5.46"
default-features = false
features = ["derive", "env", "std"]
optional = true

[dependencies.tokio]
version = "1.47.1"
default-features = false
features = ["fs", "io-std", "io-util", "macros", "process", "rt"]

[dependencies.wasefire-protocol]
version = "0.3.1-git"
path = "../protocol"
features = ["host"]
optional = true

[dependencies.wasefire-protocol-tokio]
version = "0.1.2-git"
path = "../protocol-tokio"
features = ["host", "log"]
optional = true

[dependencies.wasefire-protocol-usb]
version = "0.3.1-git"
path = "../protocol-usb"
features = ["host", "log"]
optional = true

[dependencies.wasmtime]
version = "36.0.2"
default-features = false
features = ["cranelift", "pulley"]
optional = true

[features]
action = [
  "cargo",
  "dep:clap",
  "dep:data-encoding",
  "dep:humantime",
  "dep:indicatif",
  "dep:rusb",
  "dep:serialport",
  "dep:wasefire-common",
  "dep:wasefire-interpreter",
  "dep:wasefire-protocol",
  "dep:wasefire-protocol-tokio",
  "dep:wasefire-protocol-usb",
  "dep:wasefire-wire",
  "dep:wasmtime",
  "tokio/time",
]
cargo = ["dep:cargo_metadata"]
changelog = ["cargo", "dep:clap", "dep:semver"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
