[package]
name = "wasefire-cli"
version = "0.2.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Wasefire CLI to manage applets and platforms"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["cli", "embedded", "framework", "wasm"]
categories = ["command-line-utilities", "embedded", "wasm"]

[[bin]]
name = "wasefire"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.86", default-features = false }
clap = { version = "4.5.4", default-features = false, features = ["default", "derive", "env"] }
clap_complete = { version = "4.5.2", default-features = false }
env_logger = { version = "0.11.3", default-features = false, features = ["default"] }
wasefire-cli-tools = { version = "0.2.0-git", path = "../cli-tools", features = ["action"] }

[dependencies.tokio]
version = "1.40.0"
default-features = false
features = ["macros", "parking_lot", "rt", "rt-multi-thread"]

[lints]
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
