[package]
name = "wasefire-cli"
version = "0.3.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire CLI to manage applets and platforms"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["cli", "embedded", "framework", "wasm"]
categories = ["command-line-utilities", "embedded", "wasm"]

[[bin]]
name = "wasefire"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.98", default-features = false }
clap = { version = "4.5.42", default-features = false, features = ["default", "derive", "env"] }
clap_complete = { version = "4.5.55", default-features = false }
env_logger = { version = "0.11.8", default-features = false, features = ["default"] }
wasefire-cli-tools = { version = "0.3.0-git", path = "../cli-tools", features = ["action"] }
wasefire-one-of = { version = "0.1.1-git", path = "../one-of" }

[dependencies.tokio]
version = "1.47.1"
default-features = false
features = ["macros", "parking_lot", "rt", "rt-multi-thread"]

[features]
_dev = []
_prod = []

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
