[package]
name = "wasefire-cli"
version = "0.4.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire CLI to manage applets and platforms"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["cli", "embedded", "framework", "wasm"]
categories = ["command-line-utilities", "embedded", "wasm"]

[[bin]]
name = "wasefire"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.100", default-features = false }
clap = { version = "4.5.56", default-features = false, features = ["default", "derive", "env"] }
clap_complete = { version = "4.5.65", default-features = false }
env_logger = { version = "0.11.8", default-features = false, features = ["default"] }
target-triple = { version = "1.0.0", default-features = false }
wasefire-cli-tools = { version = "0.4.0", path = "../cli-tools", features = ["action"] }
wasefire-one-of = { version = "0.1.2", path = "../one-of" }

[dependencies.tokio]
version = "1.49.0"
default-features = false
features = ["macros", "parking_lot", "rt", "rt-multi-thread"]

[features]
_dev = []
_prod = []

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
