[package]
name = "wasefire-common"
version = "0.1.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire common items"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[dependencies]
defmt = { version = "1.0.1", default-features = false, optional = true }
wasefire-error = { version = "0.1.3", path = "../error" }
wasefire-sync = { version = "0.1.2", path = "../sync" }

[features]
defmt = ["dep:defmt"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
