[package]
name = "wasefire-error"
version = "0.1.3-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire API errors"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[dependencies]
defmt = { version = "0.3.10", default-features = false, optional = true }
num_enum = { version = "0.7.3", default-features = false }

[features]
defmt = ["dep:defmt"]
std = []

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
