[package]
name = "wasefire-error"
version = "0.1.4-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire API errors"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std"]
categories = ["embedded", "no-std"]

[dependencies]
defmt = { version = "1.0.1", default-features = false, optional = true }
num_enum = { version = "0.7.5", default-features = false }

[features]
defmt = ["dep:defmt"]
std = []

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
