[package]
name = "wasefire-interpreter"
version = "0.4.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire WebAssembly interpreter"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[dependencies]
libm = { version = "0.2.8", default-features = false, optional = true }
lru = { version = "0.13.0", default-features = false, features = ["hashbrown"], optional = true }
num_enum = { version = "0.7.2", default-features = false }
paste = { version = "1.0.15", default-features = false }
portable-atomic = { version = "1.6.0", default-features = false }
wasefire-error = { version = "0.1.3-git", path = "../error" }

[dev-dependencies]
lazy_static = "1.4.0"
wast = "226.0.0"

[features]
# Enable debugging features (only works for targets with std).
debug = []
# Use safe operations when time-of-use and time-of-check differ.
toctou = []
# Enable support for specific types.
float-types = ["dep:libm"]
vector-types = []
# Enable caching for execution.
cache = ["dep:lru"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unused-crate-dependencies = "warn"
