[package]
name = "wasefire-interpreter"
version = "0.5.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire WebAssembly interpreter"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[dependencies]
derive-where = { version = "1.6.0", default-features = false, features = ["nightly"] }
libm = { version = "0.2.15", default-features = false, optional = true }
num_enum = { version = "0.7.4", default-features = false }
paste = { version = "1.0.15", default-features = false }
wasefire-common = { version = "0.1.1-git", path = "../common" }
wasefire-error = { version = "0.1.3", path = "../error" }

[dev-dependencies]
lazy_static = "1.5.0"
wast = "239.0.0"

[features]
# Enable debugging features (only works for targets with std).
debug = []
# Use safe operations when time-of-use and time-of-check differ.
toctou = []
# Enable support for specific types.
float-types = ["dep:libm"]
vector-types = []

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.unused-crate-dependencies = "warn"
