[package]
name = "wasefire-logger"
version = "0.1.7-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "Wasefire platform logging"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[dependencies]
defmt = { version = "0.3.10", default-features = false, optional = true }
log = { version = "0.4.26", default-features = false, optional = true }

[features]
defmt = ["dep:defmt"]
log = ["dep:log"]

[lints]
clippy.literal-string-with-formatting-args = "allow"
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
