[package]
name = "wasefire-one-of"
version = "0.1.1-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Macros for mutually exclusive features"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["macro", "no-std"]
categories = ["no-std"]

[lints]
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.missing-docs = "warn"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
