[package]
name = "wasefire"
version = "0.5.0-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "High-level Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/src"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
features = ["rust-crypto"]

[dependencies]
aead = { version = "0.5.2", default-features = false, features = ["alloc"], optional = true }
bytemuck = { version = "1.14.0", default-features = false }
const-default = { version = "1.0.0", default-features = false }
crypto-common = { version = "0.1.6", default-features = false, optional = true }
digest = { version = "0.10.7", default-features = false, features = ["mac"], optional = true }
generic-array = { version = "0.14.7", default-features = false }
rlsf = { version = "0.2.1", default-features = false }
sealed = { version = "0.5.0", default-features = false }
typenum = { version = "1.17.0", default-features = false }
wasefire-applet-api = { version = "0.6.0-git", path = "../api", features = ["wasm"] }
wasefire-error = { version = "0.1.0-git", path = "../error" }
wasefire-sync = { version = "0.1.0-git", path = "../sync" }
zeroize = { version = "1.7.0", default-features = false, features = ["derive"], optional = true }

[features]
# Uses multiple return values instead of output parameters (experimental).
multivalue = ["wasefire-applet-api/multivalue"]
# Implements RustCrypto traits.
rust-crypto = ["dep:aead", "dep:crypto-common", "dep:digest", "dep:zeroize"]
# Builds for native library usage instead of Wasm binary (incompatible with test).
native = ["wasefire-applet-api/native"]
# Builds for unit-testing applets (incompatible with native).
test = []
# Sets portable-atomic/unsafe-assume-single-core (for convenience).
unsafe-assume-single-core = ["wasefire-sync/unsafe-assume-single-core"]
