[package]
name = "wasefire"
version = "0.6.0"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "High-level Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
features = ["full-api", "rust-crypto"]

[dependencies]
aead = { version = "0.5.2", default-features = false, features = ["alloc"], optional = true }
bytemuck = { version = "1.16.0", default-features = false }
const-default = { version = "1.0.0", default-features = false, optional = true }
crypto-common = { version = "0.1.6", default-features = false, optional = true }
digest = { version = "0.10.7", default-features = false, features = ["mac"], optional = true }
rlsf = { version = "0.2.1", default-features = false, optional = true }
sealed = { version = "0.5.0", default-features = false, optional = true }
typenum = { version = "1.17.0", default-features = false, optional = true }
usbd-ctaphid = "0.1.0"
wasefire-applet-api = { version = "0.6.1", path = "../api", features = ["wasm"] }
wasefire-error = { version = "0.1.1", path = "../error" }
wasefire-sync = { version = "0.1.1", path = "../sync" }
zeroize = { version = "1.7.0", default-features = false, features = ["derive"], optional = true }

[features]
default = ["full-api"]
# API features.
api-button = ["wasefire-applet-api/api-button"]
api-crypto-ccm = ["internal-api-crypto", "wasefire-applet-api/api-crypto-ccm"]
api-crypto-ec = [
  "dep:crypto-common",
  "dep:sealed",
  "dep:typenum",
  "internal-api-crypto",
  "wasefire-applet-api/api-crypto-ec",
]
api-crypto-gcm = ["internal-api-crypto", "wasefire-applet-api/api-crypto-gcm"]
api-crypto-hash = ["internal-api-crypto-hash", "wasefire-applet-api/api-crypto-hash"]
api-crypto-hkdf = ["api-crypto-hmac", "wasefire-applet-api/api-crypto-hkdf"]
api-crypto-hmac = ["internal-api-crypto-hash", "wasefire-applet-api/api-crypto-hmac"]
api-gpio = ["wasefire-applet-api/api-gpio"]
api-led = ["wasefire-applet-api/api-led"]
api-platform = ["internal-api-platform", "wasefire-applet-api/api-platform"]
api-platform-protocol = [
  "internal-api-platform",
  "internal-rpc",
  "wasefire-applet-api/api-platform-protocol",
]
api-platform-update = ["internal-api-platform", "wasefire-applet-api/api-platform-update"]
api-radio-ble = ["internal-api-radio", "wasefire-applet-api/api-radio-ble"]
api-rng = ["wasefire-applet-api/api-rng"]
api-store = ["internal-api-store", "wasefire-applet-api/api-store"]
api-store-fragment = ["internal-api-store", "wasefire-applet-api/api-store-fragment"]
api-timer = ["wasefire-applet-api/api-timer"]
api-uart = ["internal-serial", "wasefire-applet-api/api-uart"]
api-usb-ctap = ["internal-api-usb", "wasefire-applet-api/api-usb-ctap"]
api-usb-serial = ["internal-api-usb", "internal-serial", "wasefire-applet-api/api-usb-serial"]
# Enables all API features.
full-api = [
  "api-button",
  "api-crypto-ccm",
  "api-crypto-ec",
  "api-crypto-gcm",
  "api-crypto-hash",
  "api-crypto-hkdf",
  "api-crypto-hmac",
  "api-gpio",
  "api-led",
  "api-platform",
  "api-platform-protocol",
  "api-platform-update",
  "api-radio-ble",
  "api-rng",
  "api-store",
  "api-store-fragment",
  "api-timer",
  "api-uart",
  "api-usb-ctap",
  "api-usb-serial",
]
# Implements RustCrypto traits.
rust-crypto = ["dep:aead", "dep:crypto-common", "dep:digest", "dep:typenum", "dep:zeroize"]
# Selects the applet kind: wasm, native, or test. Exactly one must be enabled (done by the CLI).
native = ["wasefire-applet-api/native"]
test = []
wasm = ["dep:const-default", "dep:rlsf"]
# Sets portable-atomic/unsafe-assume-single-core (for convenience).
unsafe-assume-single-core = ["wasefire-sync/unsafe-assume-single-core"]
# Internal features.
internal-api-crypto = []
internal-api-crypto-hash = ["internal-api-crypto"]
internal-api-platform = []
internal-api-radio = []
internal-api-store = []
internal-api-usb = []
internal-rpc = ["dep:sealed"]
internal-serial = ["dep:sealed"]

[lints]
clippy.unit-arg = "allow"
rust.missing-docs = "warn"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
