[package]
name = "wasefire"
version = "0.8.1-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2024"
description = "High-level Wasefire applet API"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["embedded", "framework", "no-std", "wasm"]
categories = ["embedded", "no-std", "wasm"]

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
features = ["full-api", "rust-crypto"]

[dependencies]
aead = { version = "0.5.2", default-features = false, features = ["alloc"], optional = true }
bytemuck = { version = "1.25.0", default-features = false }
const-default = { version = "1.0.0", default-features = false, optional = true }
crypto-common = { version = "0.1.7", default-features = false, optional = true }
digest = { version = "0.10.7", default-features = false, features = ["mac"], optional = true }
rlsf = { version = "0.2.1", default-features = false, optional = true }
sealed = { version = "0.6.0", default-features = false, optional = true }
typenum = { version = "1.19.0", default-features = false, optional = true }
wasefire-applet-api = { version = "0.9.0-git", path = "../api", features = ["wasm"] }
wasefire-common = { version = "0.1.1-git", path = "../common", optional = true }
wasefire-error = { version = "0.1.4-git", path = "../error" }
wasefire-one-of = { version = "0.1.2-git", path = "../one-of" }
wasefire-sync = { version = "0.1.3-git", path = "../sync" }
zeroize = { version = "1.8.2", default-features = false, features = ["derive"], optional = true }

[features]
default = ["full-api"]
# API features.
api-button = ["dep:wasefire-common", "wasefire-applet-api/api-button"]
api-clock = ["wasefire-applet-api/api-clock"]
api-crypto-cbc = ["internal-api-crypto", "wasefire-applet-api/api-crypto-cbc"]
api-crypto-ccm = ["internal-api-crypto", "wasefire-applet-api/api-crypto-ccm"]
api-crypto-ec = [
  "dep:crypto-common",
  "dep:sealed",
  "dep:typenum",
  "internal-api-crypto",
  "wasefire-applet-api/api-crypto-ec",
]
api-crypto-ecdh = ["internal-api-crypto", "wasefire-applet-api/api-crypto-ecdh"]
api-crypto-ecdsa = ["internal-api-crypto", "wasefire-applet-api/api-crypto-ecdsa"]
api-crypto-ed25519 = ["internal-api-crypto", "wasefire-applet-api/api-crypto-ed25519"]
api-crypto-gcm = ["internal-api-crypto", "wasefire-applet-api/api-crypto-gcm"]
api-crypto-hash = ["internal-api-crypto-hash", "wasefire-applet-api/api-crypto-hash"]
api-crypto-hkdf = ["api-crypto-hmac", "wasefire-applet-api/api-crypto-hkdf"]
api-crypto-hmac = ["internal-api-crypto-hash", "wasefire-applet-api/api-crypto-hmac"]
api-fingerprint-matcher = [
  "internal-api-fingerprint",
  "wasefire-applet-api/api-fingerprint-matcher",
]
api-fingerprint-sensor = ["internal-api-fingerprint", "wasefire-applet-api/api-fingerprint-sensor"]
api-gpio = ["wasefire-applet-api/api-gpio"]
api-led = ["wasefire-applet-api/api-led"]
api-platform = ["dep:wasefire-common", "internal-api-platform", "wasefire-applet-api/api-platform"]
api-platform-protocol = [
  "internal-api-platform",
  "internal-rpc",
  "wasefire-applet-api/api-platform-protocol",
]
api-platform-update = ["internal-api-platform", "wasefire-applet-api/api-platform-update"]
api-rng = ["wasefire-applet-api/api-rng"]
api-store = ["internal-api-store", "wasefire-applet-api/api-store"]
api-store-fragment = ["internal-api-store", "wasefire-applet-api/api-store-fragment"]
api-timer = ["dep:wasefire-common", "wasefire-applet-api/api-timer"]
api-uart = ["internal-serial", "wasefire-applet-api/api-uart"]
api-usb-ctap = ["internal-api-usb", "wasefire-applet-api/api-usb-ctap"]
api-usb-serial = ["internal-api-usb", "internal-serial", "wasefire-applet-api/api-usb-serial"]
api-vendor = ["wasefire-applet-api/api-vendor"]
# Enables all API features.
full-api = [
  "api-button",
  "api-clock",
  "api-crypto-cbc",
  "api-crypto-ccm",
  "api-crypto-ec",
  "api-crypto-ecdh",
  "api-crypto-ecdsa",
  "api-crypto-ed25519",
  "api-crypto-gcm",
  "api-crypto-hash",
  "api-crypto-hkdf",
  "api-crypto-hmac",
  "api-fingerprint-matcher",
  "api-fingerprint-sensor",
  "api-gpio",
  "api-led",
  "api-platform",
  "api-platform-protocol",
  "api-platform-update",
  "api-rng",
  "api-store",
  "api-store-fragment",
  "api-timer",
  "api-uart",
  "api-usb-ctap",
  "api-usb-serial",
  "api-vendor",
]
# Implements RustCrypto traits.
rust-crypto = ["dep:aead", "dep:crypto-common", "dep:digest", "dep:typenum", "dep:zeroize"]
# Selects the applet kind: wasm, native, or test. Exactly one must be enabled (done by the CLI).
native = ["wasefire-applet-api/native"]
test = []
wasm = ["dep:const-default", "dep:rlsf"]
# Sets portable-atomic/unsafe-assume-single-core (for convenience).
unsafe-assume-single-core = ["wasefire-sync/unsafe-assume-single-core"]
# Internal features.
internal-api-crypto = []
internal-api-crypto-hash = ["internal-api-crypto"]
internal-api-fingerprint = ["dep:wasefire-common"]
internal-api-platform = []
internal-api-store = []
internal-api-usb = []
internal-rpc = ["dep:sealed"]
internal-serial = ["dep:sealed"]

[lints]
clippy.mod-module-files = "warn"
clippy.uninlined_format_args = "allow"
clippy.unit-arg = "allow"
rust.missing-docs = "warn"
rust.unreachable-pub = "warn"
rust.unused-crate-dependencies = "warn"
