[package]
name = "wasefire-protocol-tokio"
version = "0.1.1-git"
authors = ["Julien Cretin <cretin@google.com>"]
license = "Apache-2.0"
publish = true
edition = "2021"
description = "Wasefire protocol using std::io::Read and Write"
repository = "https://github.com/google/wasefire"
include = ["/LICENSE", "/src/"]
keywords = ["framework"]
categories = []

[package.metadata.docs.rs]
features = ["device"]

[dependencies]
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
wasefire-error = { version = "0.1.3-git", path = "../error", optional = true }
wasefire-logger = { version = "0.1.7-git", path = "../logger", optional = true }
wasefire-one-of = { version = "0.1.1-git", path = "../one-of" }

[dependencies.tokio]
version = "1.40.0"
default-features = false
features = ["io-util", "macros", "net", "rt", "sync"]

[dependencies.wasefire-board-api]
version = "0.8.1-git"
path = "../board"
features = ["std"]
optional = true

[dependencies.wasefire-protocol]
version = "0.2.1-git"
path = "../protocol"
features = ["host"]
optional = true

[features]
log = ["wasefire-board-api?/log", "wasefire-logger?/log"]
# Exactly one of host or device must be selected.
device = ["dep:wasefire-board-api", "dep:wasefire-error", "dep:wasefire-logger"]
host = ["dep:wasefire-protocol"]

[lints]
clippy.mod-module-files = "warn"
clippy.unit-arg = "allow"
rust.unreachable-pub = "warn"
rust.unsafe-op-in-unsafe-fn = "warn"
rust.unused-crate-dependencies = "warn"
